--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
   <footer>
-    Made with ❤️ in India.
+    Made with Love by Sahil Kumar.
   </footer>
   <script src="index.js"></script>
 </body>
